# dt4mob-level-ams-loader

./: .dockerignore  .gitignore  Dockerfile  config.example.toml  example.config.toml  instrument_coords.example.csv  main.py  pyproject.toml
app/: hono_connection.py  level_ams_loader.py
app/dependencies/: ditto_client.py  history_client.py
app/models/: common.py
app/models/ditto/: __init__.py
app/models/ditto/level_ams/: geotechnical_asset.py  instrument.py
app/models/history/: event.py
app/models/level_ams/: geotechnical_asset.py  instrument.py  parameter.py
app/settings/: __init__.py  dashboard.py  ditto.py  history_loading.py  hono.py  loader.py  loader_constraints.py  oidc.py  thresholds.py
app/utils/: geo.py
docs/programmer-manual/: 01-architecture-overview.md  02-local-setup.md  03-project-structure.md  04-scripts-and-commands.md  05-deployment.md  06-environment-variables.md  07-code-conventions.md
docs/user-manual/: 01-overview.md  02-prerequisites.md  03-installation.md  04-usage-guide.md  05-configuration.md  06-current-versions.md  07-running-the-service.md  08-instrument-coordinates-csv.md  09-troubleshooting.md
