[project]
name = "level-ams-loader"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "amqtt>=0.11.3",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-argparse>=0.10.0",
  "pydantic-settings>=2.12.0",
  "pyproj>=3.7.2",
]

[dependency-groups]
dev = ["mypy>=1.19.0", "ruff>=0.12.5"]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["amqtt.client", "amqtt.contexts"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["T20"]
